fix(popup-version):fix visible version-link img

--- a/app/components/popup-version/styles.css
+++ b/app/components/popup-version/styles.css
@@ -64,7 +64,7 @@
         -webkit-overflow-scrolling: touch;
         text-align: center;
     }
-    &____image {
+    &__image {
         max-width: 100%;
         max-height: 100%;
         vertical-align: top;
